--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
       <h2 class="slider-title" data-aos="zoom-in">🍽 Our Delicious Dishes</h2>
       <div class="slider" data-aos="zoom-in-up">
         <div class="slides">
-          <img src="images/pizza.jpg" alt="Food 1" class="slide active" />
-          <img src="images/veg momos.jpg" alt="Food 2" class="slide" />
-          <img src="images/samosa.jpg" alt="Food 3" class="slide" />
-          <img src="images/s r.jpg" alt="Food 4" class="slide" />
+          <img src="pizza.jpg" alt="Food 1" class="slide active" />
+          <img src="veg momos.jpg" alt="Food 2" class="slide" />
+          <img src="samosa.jpg" alt="Food 3" class="slide" />
+          <img src="s r.jpg" alt="Food 4" class="slide" />
         </div>
         <button class="prev">&#10094;</button>
         <button class="next">&#10095;</button>
@@ -481,5 +481,6 @@
 
 <script src="first.js"></script>
 </body>
+
 
 </html>
