--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <section class="dish-of-the-day" data-aos="fade-up">
     <h2 data-aos="fade-right">🍽 Dish of the Day</h2>
     <div class="dish-highlight" data-aos="zoom-in">
-      <img src="C:\Users\suraj\Downloads\web devlopment\images\butter paneer.jpg" alt="Paneer Butter Masala" />
+      <img src="butter paneer.jpg" alt="Paneer Butter Masala" />
       <div class="dish-info" data-aos="fade-left">
         <h3>Paneer Butter Masala</h3>
         <p>A creamy, rich, and flavorful dish with a perfect blend of spices.</p>
@@ -89,7 +89,7 @@
     <h2 data-aos="fade-left">Starters 🍔</h2>
     <div class="gallery" data-aos="zoom-in-up">
       <div class="food-item" data-category="starters">
-        <img src="images/samosa.jpg" alt="Samosa" />
+        <img src="/samosa.jpg" alt="Samosa" />
         <p>Samosa</p>
         <p>₹30</p>
         <button>Order Now</button>
@@ -484,3 +484,4 @@
 
 
 </html>
+
