--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@
     <h2 data-aos="fade-left">Starters 🍔</h2>
     <div class="gallery" data-aos="zoom-in-up">
       <div class="food-item" data-category="starters">
-        <img src="/samosa.jpg" alt="Samosa" />
+        <img src="samosa.jpg" alt="Samosa" />
         <p>Samosa</p>
         <p>₹30</p>
         <button>Order Now</button>
       </div>
       <div class="food-item" data-category="starters">
-        <img src="images/s r.jpg" alt="Spring Rolls" />
+        <img src="s r.jpg" alt="Spring Rolls" />
         <p>Spring Rolls</p>
         <p>₹60</p>
         <button>Order Now</button>
       </div>
       <div class="food-item" data-category="starters">
-        <img src="images/greed.jpg" alt="Garlic Bread" />
+        <img src="greed.jpg" alt="Garlic Bread" />
         <p>Garlic Bread</p>
         <p>₹50</p>
         <button>Order Now</button>
@@ -111,19 +111,19 @@
 
       <!-- <div class="gallery"> -->
       <div class="food-item" data-category="starters">
-        <img src="images/kanda bahje.jpg" alt="Samosa" />
+        <img src="kanda bahje.jpg" alt="Samosa" />
         <p>kanda bhaji</p>
         <p>₹50</p>
         <button>Order Now</button>
       </div>
       <div class="food-item" data-category="starters">
-        <img src="images/veg momos.jpg" alt="Samosa" />
+        <img src="veg momos.jpg" alt="Samosa" />
         <p>veg momos</p>
         <p>₹70</p>
         <button>Order Now</button>
       </div>
       <div class="food-item" data-category="starters">
-        <img src="images/garlic-panner.jpg" alt="Samosa" />
+        <img src="garlic-panner.jpg" alt="Samosa" />
         <p>Garlic Paneer</p>
         <p>₹80</p>
         <button>Order Now</button>
@@ -134,19 +134,19 @@
     <h2 data-aos="fade-left">Main Course</h2>
     <div class="gallery" data-aos="zoom-in-up">
       <div class="food-item" data-category="main-course">
-        <img src="images/butter paneer.jpg" alt="Paneer Butter Masala" />
+        <img src="butter paneer.jpg" alt="Paneer Butter Masala" />
         <p>Paneer Butter Masala</p>
         <p>₹220</p>
         <button>Order Now</button>
       </div>
       <div class="food-item" data-category="main-course">
-        <img src="images/veg biryani.jpg" alt="Veg Biryani" />
+        <img src="veg biryani.jpg" alt="Veg Biryani" />
         <p>Veg Biryani</p>
         <p>₹260</p>
         <button>Order Now</button>
       </div>
       <div class="food-item" data-category="main-course">
-        <img src="images/chicken.jpg" alt="Chicken Curry" />
+        <img src="chicken.jpg" alt="Chicken Curry" />
         <p>Chicken Curry</p>
         <p>₹200</p>
         <button>Order Now</button>
@@ -157,19 +157,19 @@
     <h2 data-aos="fade-left">Desserts</h2>
     <div class="gallery" data-aos="zoom-in-up">
       <div class="food-item" data-category="desserts">
-        <img src="images/cake.jpg" alt="Chocolate Cake" />
+        <img src="cake.jpg" alt="Chocolate Cake" />
         <p>Chocolate Cake</p>
         <p>₹150</p>
         <button>Order Now</button>
       </div>
       <div class="food-item" data-category="desserts">
-        <img src="images/ice cream.jpg" alt="Ice Cream" />
+        <img src="ice cream.jpg" alt="Ice Cream" />
         <p>Ice Cream</p>
         <p>₹100</p>
         <button>Order Now</button>
       </div>
       <div class="food-item" data-category="desserts">
-        <img src="images/gulaab jamun.jpg" alt="Gulab Jamun" />
+        <img src="gulaab jamun.jpg" alt="Gulab Jamun" />
         <p>Gulab Jamun</p>
         <p>₹80</p>
         <button>Order Now</button>
@@ -183,23 +183,23 @@
     <section class="restaurant-gallery">
       <h2 class="gallery-title" data-aos="fade-up">Our Restaurant Moments 🏠</h2>
       <div class="gallery-grid">
-        <a href="images/restaurant1.jpg" data-lightbox="restaurant" data-aos="zoom-in">
-          <img src="images/restaurant1.jpg" alt="Restaurant View 1">
+        <a href="restaurant1.jpg" data-lightbox="restaurant" data-aos="zoom-in">
+          <img src="restaurant1.jpg" alt="Restaurant View 1">
         </a>
-        <a href="images/restaurant2.jpg" data-lightbox="restaurant" data-aos="zoom-in" data-aos-delay="100">
-          <img src="images/restaurant2.jpg" alt="Restaurant View 2">
+        <a href="restaurant2.jpg" data-lightbox="restaurant" data-aos="zoom-in" data-aos-delay="100">
+          <img src="restaurant2.jpg" alt="Restaurant View 2">
         </a>
-        <a href="images/restaurant3.jpg" data-lightbox="restaurant" data-aos="zoom-in" data-aos-delay="200">
-          <img src="images/restaurant3.jpg" alt="Restaurant View 3">
+        <a href="restaurant3.jpg" data-lightbox="restaurant" data-aos="zoom-in" data-aos-delay="200">
+          <img src="restaurant3.jpg" alt="Restaurant View 3">
         </a>
-        <a href="images/restaurant4.jpg" data-lightbox="restaurant" data-aos="zoom-in" data-aos-delay="300">
-          <img src="images/restaurant4.jpg" alt="Restaurant View 4">
+        <a href="restaurant4.jpg" data-lightbox="restaurant" data-aos="zoom-in" data-aos-delay="300">
+          <img src="restaurant4.jpg" alt="Restaurant View 4">
         </a>
-        <a href="images/restaurant5.jpg" data-lightbox="restaurant" data-aos="zoom-in" data-aos-delay="400">
-          <img src="images/restaurant5.jpg" alt="Restaurant View 5">
+        <a href="restaurant5.jpg" data-lightbox="restaurant" data-aos="zoom-in" data-aos-delay="400">
+          <img src="restaurant5.jpg" alt="Restaurant View 5">
         </a>
-        <a href="images/restaurant6.jpg" data-lightbox="restaurant" data-aos="zoom-in" data-aos-delay="500">
-          <img src="images/restaurant6.jpg" alt="Restaurant View 6">
+        <a href="restaurant6.jpg" data-lightbox="restaurant" data-aos="zoom-in" data-aos-delay="500">
+          <img src="restaurant6.jpg" alt="Restaurant View 6">
         </a>
       </div>
     </section>
@@ -223,7 +223,7 @@
         <div class="reviews-slider">
           <div class="review-card" data-aos="fade-right" data-aos-delay="200">
             <div class="reviewer-photo">
-              <img src="images/81.jpg" alt="Sam" />
+              <img src="81.jpg" alt="Sam" />
             </div>
             <div class="review-content">
               <h3>Samantha</h3>
@@ -234,7 +234,7 @@
           </div>
           <div class="review-card" data-aos="fade-up" data-aos-delay="300">
             <div class="reviewer-photo">
-              <img src="images/65.jpg" alt="kate" />
+              <img src="65.jpg" alt="kate" />
             </div>
             <div class="review-content">
               <h3>Kate Wislet</h3>
@@ -245,7 +245,7 @@
 
           <div class="review-card" data-aos="fade-left" data-aos-delay="400">
             <div class="reviewer-photo">
-              <img src="images/82.jpg" alt="Alex Johnson" />
+              <img src="82.jpg" alt="Alex Johnson" />
             </div>
             <div class="review-content">
               <h3>Amber Heard</h3>
@@ -262,18 +262,7 @@
         <span class="review-dot"></span>
       </div>
     </section>
-
-    <!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Chef Section</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-</head>
-<body> -->
-
+    
     <section class="chef-section" data-aos="fade-up">
       <h2 class="section-title" data-aos="fade-down">Meet Our Master Chefs 👨‍🍳</h2>
 
@@ -281,7 +270,7 @@
         <!-- Chef Card 1 -->
         <div class="chef-card" data-aos="fade-right" data-aos-delay="100">
           <div class="chef-img">
-            <img src="images/chef 3.jpg" alt="Chef Armaan">
+            <img src="chef 3.jpg" alt="Chef Armaan">
             <div class="overlay">
               <p>Specializes in Mughlai & Tandoori Dishes. 15+ years of experience.</p>
             </div>
@@ -298,7 +287,7 @@
         <!-- Chef Card 2 -->
         <div class="chef-card" data-aos="zoom-in" data-aos-delay="200">
           <div class="chef-img">
-            <img src="images/chef 1.jpg" alt="Chef Neha">
+            <img src="chef 1.jpg" alt="Chef Neha">
             <div class="overlay">
               <p>Pastry artist known for artisan cakes and fusion desserts.</p>
             </div>
@@ -315,7 +304,7 @@
         <!-- Chef Card 3 -->
         <div class="chef-card" data-aos="fade-up" data-aos-delay="300">
           <div class="chef-img">
-            <img src="images/chef 4.jpg" alt="Chef Neha">
+            <img src="chef 4.jpg" alt="Chef Neha">
             <div class="overlay">
               <p>Pastry artist known for artisan cakes and fusion desserts.</p>
             </div>
@@ -332,7 +321,7 @@
         <!-- Chef Card 3 -->
         <div class="chef-card" data-aos="fade-left" data-aos-delay="400">
           <div class="chef-img">
-            <img src="images/chef 2.jpg" alt="Chef Rahul">
+            <img src="chef 2.jpg" alt="Chef Rahul">
             <div class="overlay">
               <p>Revolutionizing Indian street food with healthy & modern twists.</p>
             </div>
@@ -484,4 +473,5 @@
 
 
 </html>
+
 
