--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     <p>Founded in 2020, FoodieZest was born from a passion for flavorful food and soulful dining. Our chefs blend tradition with innovation, serving up unforgettable meals with a twist of love and spice.</p>
   </div>
   <div class="about-image">
-    <img src="images/kichen.jpg" alt="Kitchen">
+    <img src="kichen.jpg" alt="Kitchen">
   </div>
 </section>
 
@@ -53,9 +53,9 @@
     <section class="container">
         <div class="slider-wraper">
             <div class = "slider">
-                <img id="slide-1" src="images/hotel 2.jpg" alt="hotel 1"/>
-                <img id="slide-2" src="images/hotel 3.jpg" alt="hotel 1"/>
-                <img id="slide-3" src="images/hotel.jpg" alt="hotel 1"/>
+                <img id="slide-1" src="hotel 2.jpg" alt="hotel 1"/>
+                <img id="slide-2" src="hotel 3.jpg" alt="hotel 1"/>
+                <img id="slide-3" src="hotel.jpg" alt="hotel 1"/>
 
             </div>
             <div class="slider-nav">
@@ -123,4 +123,5 @@
   
     <script src="first.js"></script>
 </body>
+
 </html>
