--- a/menu.html
+++ b/menu.html
@@ -39,19 +39,19 @@
         <h2>Starters 🍔</h2>
         <div class="gallery">
             <div class="food-item" data-category="starters">
-                <img src="images/samosa.jpg" alt="Samosa" />
+                <img src="samosa.jpg" alt="Samosa" />
                 <p>Samosa</p>
                 <p>₹30</p>
                 <button>Order Now</button>
             </div>
             <div class="food-item" data-category="starters">
-                <img src="images/s r.jpg" alt="Spring Rolls" />
+                <img src="s r.jpg" alt="Spring Rolls" />
                 <p>Spring Rolls</p>
                 <p>₹60</p>
                 <button>Order Now</button>
             </div>
             <div class="food-item" data-category="starters">
-                <img src="images/greed.jpg" alt="Garlic Bread" />
+                <img src="greed.jpg" alt="Garlic Bread" />
                 <p>Garlic Bread</p>
                 <p>₹50</p>
                 <button>Order Now</button>
@@ -62,19 +62,19 @@
         <h2>Main Course</h2>
         <div class="gallery">
             <div class="food-item" data-category="main-course">
-                <img src="images/butter paneer.jpg" alt="Paneer Butter Masala" />
+                <img src="butter paneer.jpg" alt="Paneer Butter Masala" />
                 <p>Paneer Butter Masala</p>
                 <p>₹180</p>
                 <button>Order Now</button>
             </div>
             <div class="food-item" data-category="main-course">
-                <img src="images/veg biryani.jpg" alt="Veg Biryani" />
+                <img src="veg biryani.jpg" alt="Veg Biryani" />
                 <p>Veg Biryani</p>
                 <p>₹120</p>
                 <button>Order Now</button>
             </div>
             <div class="food-item" data-category="main-course">
-                <img src="images/chicken.jpg" alt="Chicken Curry" />
+                <img src="chicken.jpg" alt="Chicken Curry" />
                 <p>Chicken Curry</p>
                 <p>₹220</p>
                 <button>Order Now</button>
@@ -85,19 +85,19 @@
         <h2>Desserts</h2>
         <div class="gallery">
             <div class="food-item" data-category="desserts">
-                <img src="images/cake.jpg" alt="Chocolate Cake" />
+                <img src="cake.jpg" alt="Chocolate Cake" />
                 <p>Chocolate Cake</p>
                 <p>₹100</p>
                 <button>Order Now</button>
             </div>
             <div class="food-item" data-category="desserts">
-                <img src="images/ice cream.jpg" alt="Ice Cream" />
+                <img src="ice cream.jpg" alt="Ice Cream" />
                 <p>Ice Cream</p>
                 <p>₹80</p>
                 <button>Order Now</button>
             </div>
             <div class="food-item" data-category="desserts">
-                <img src="images/gulaab jamun.jpg" alt="Gulab Jamun" />
+                <img src="gulaab jamun.jpg" alt="Gulab Jamun" />
                 <p>Gulab Jamun</p>
                 <p>₹150</p>
                 <button>Order Now</button>
@@ -105,4 +105,5 @@
         </div>
       <script src="first.js"></script>
 </body>
+
 <html>
